# sepia

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  Ecoli1_batch_example_summary.txt  Ecoli2_batch_example_summary.txt  Efaecium_batch_example_summary.txt  LICENSE  MiSeq_timing_forme_hll_summary.txt  README.md  batch_example.txt  profile_MiSeq_after.out  profile_MiSeq_after3.out  profile_MiSeq_after5_summary.txt  profile_custom_summary.txt  profile_paired_summary.txt  profile_run_summary.txt  ref_demo.txt  test.sh
.github/workflows/: rust.yml
demo_index_profile/: parameters
paper/: paper.bib  paper.md
scripts/: summarize_sepia.py
src/: bit_magic.rs  build_index.rs  build_non_mutex.rs  classify_batch.rs  classify_batch_sepia.rs  direct_read_write.rs  hll_pool.rs  io_writer.rs  kmer.rs  lib.rs  main.rs  main_redis.rs  read_filter.rs  search_bits.rs  search_bits_bsyncm.rs  search_bits_sepia.rs  seq.rs  taxonomy_u32.rs  zeroth.rs  zeroth_non_mutex.rs
tests/: hll_pool_tests.rs  io_writer_tests.rs  lca_poll_tests.rs
