[package]
name = "sepia"
version = "1.1.0"
authors = ["henk den bakker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boomphf = "0.5.5"
flate2 = { version = "^1.0.13", features = ["zlib"], default-features = false }
fnv = "1.0.6"
seahash = "3.0.6"
rayon = "^1.5.0"
hashbrown = "^0.3.0"
serde = "^1.0.91"
serde_json = "1.0.9"
bincode = "^1.1.3"
serde_derive = "1.0.91"
itertools = "0.8.0"
bytelines = "2.2"
byteorder = "1.3.1"
clap = "2.30.0"
sdset = "0.3.4"
lazy_static = "1.4.0"
linereader = "0.4.0"
bstr = "0.2.12"
thincollections = "0.5.3"
niffler = "^2.3.2"
needletail = "0.6"
hyperloglog = "0.0.12"
sysinfo = "0.20.3"
fs_extra = "1.2.0"
memmap2 = "0.9"
dashmap = "6.1.0"
smallvec = "1.15.1"
bumpalo = "3.19.0"

[features]
default = ["boomphf/serde", "hashbrown/serde"]

